--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>363 Tagged Open Ruby Bugs as of 2021-04-29 04:43:59 +0900</title>
+<title>362 Tagged Open Ruby Bugs as of 2021-05-01 07:26:13 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -41,9 +41,9 @@
 <input type="submit" value="wip-patch" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">363</span> matched)
+(<span id="matched">362</span> matched)
 <table>
-<caption>363 Tagged Open Ruby Bugs as of 2021-04-29 04:43:59 +0900</caption>
+<caption>362 Tagged Open Ruby Bugs as of 2021-05-01 07:26:13 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -52,6 +52,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/17840">17840</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17840">`make install` overriding file permission with 644</a>
+</td>
+</tr>
 <tr class=" patch win lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/17839">17839</a>
 </td>
@@ -136,10 +143,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/17806">Bad interaction between method cache, prepend, and refinements</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/17804">17804</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17804">Math.cbrt(0.0) returns NaN</a>
 </td>
 </tr>
@@ -836,13 +843,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16983">RubyVM::AbstractSyntaxTree.of(method) returns meaningless node if the method is defined in eval</a>
 </td>
 </tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16962">16962</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16962">IO.close behaviour</a>
-</td>
-</tr>
 <tr class=" maybenotbug core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16959">16959</a>
 </td>
@@ -997,13 +997,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16694">JIT vs hardened GCC with PCH</a>
 </td>
 </tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16680">16680</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16680">Symlink folder in $LOAD_PATH does not work with autoload</a>
-</td>
-</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/16674">16674</a>
 </td>
@@ -1025,10 +1018,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16654">Segfault in rb_str_hash</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16612">16612</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16612">Enumerator::ArithmeticSequence#last with float range produces incorrect value</a>
 </td>
 </tr>
