--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>362 Tagged Open Ruby Bugs as of 2021-05-01 07:26:13 +0900</title>
+<title>361 Tagged Open Ruby Bugs as of 2021-05-05 01:54:44 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -35,15 +35,16 @@
 <input type="submit" value="backport" />
 <input type="submit" value="doc" />
 <input type="submit" value="haiku" />
+<input type="submit" value="mac" />
 <input type="submit" value="macos" />
 <input type="submit" value="mips" />
 <input type="submit" value="misc" />
 <input type="submit" value="wip-patch" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">362</span> matched)
+(<span id="matched">361</span> matched)
 <table>
-<caption>362 Tagged Open Ruby Bugs as of 2021-05-01 07:26:13 +0900</caption>
+<caption>361 Tagged Open Ruby Bugs as of 2021-05-05 01:54:44 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -52,6 +53,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" mac maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17843">17843</a>
+</td>
+<td>mac maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17843">Ruby on Rails error[BUG] Segmentation fault at 0x0000000000000110 ruby 3.0.1p64 (2021-04-05 revision 0fb782ee38) [x86_64-darwin15] (#42110)</a>
+</td>
+</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/17840">17840</a>
 </td>
@@ -120,13 +128,6 @@
 </td>
 <td>patch win ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17813">rb_funcall() may reset the latest socket error unexpectedlly since Ruby 3.0.0</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/17812">17812</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17812">Timeout::Error doesn&#39;t let two-argument raise() set a new message</a>
 </td>
 </tr>
 <tr class=" patch core ">
@@ -456,13 +457,6 @@
 </td>
 <td>maybenotbug fiber</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17607">ChildProcess vs RUBY_PIPE_NONBLOCK_DEFAULT</a>
-</td>
-</tr>
-<tr class=" cygwin ">
-<td><a href="https://bugs.ruby-lang.org/issues/17606">17606</a>
-</td>
-<td>cygwin</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17606">Make failed on i386-cygwin (miniruby.exe aborted)</a>
 </td>
 </tr>
 <tr class=" build win ">
@@ -1158,10 +1152,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15993">&#39;require&#39; doesn&#39;t work if there are Cyrillic chars in the path to Ruby dir</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/15928">15928</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15928">Constant declaration does not conform to JIS 3017:2013</a>
 </td>
 </tr>
