--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>361 Tagged Open Ruby Bugs as of 2021-05-05 01:54:44 +0900</title>
+<title>360 Tagged Open Ruby Bugs as of 2021-05-08 08:08:47 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -42,9 +42,9 @@
 <input type="submit" value="wip-patch" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">361</span> matched)
+(<span id="matched">360</span> matched)
 <table>
-<caption>361 Tagged Open Ruby Bugs as of 2021-05-05 01:54:44 +0900</caption>
+<caption>360 Tagged Open Ruby Bugs as of 2021-05-08 08:08:47 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -53,6 +53,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17854">17854</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17854">Crash with certain &quot;case&quot; expressions on FreeBSD</a>
+</td>
+</tr>
 <tr class=" mac maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/17843">17843</a>
 </td>
@@ -247,13 +254,6 @@
 </td>
 <td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17757">Hash#slice does not keep compare_by_identity on the results</a>
-</td>
-</tr>
-<tr class=" patch ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/17756">17756</a>
-</td>
-<td>patch ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17756">StringScanner#charpos makes segmentation fault when target.byteslice returns non string value</a>
 </td>
 </tr>
 <tr class=" patch lib ">
@@ -1640,13 +1640,6 @@
 </td>
 <td>build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14409">インストール手順の改善</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/14400">14400</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14400">IO#ungetc and IO#ungetbyte documentation is inconsistent with the behavior</a>
 </td>
 </tr>
 <tr class=" patch ext perf ">
