--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>357 Tagged Open Ruby Bugs as of 2021-05-12 06:52:44 +0900</title>
+<title>357 Tagged Open Ruby Bugs as of 2021-05-13 06:45:15 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -44,7 +44,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">357</span> matched)
 <table>
-<caption>357 Tagged Open Ruby Bugs as of 2021-05-12 06:52:44 +0900</caption>
+<caption>357 Tagged Open Ruby Bugs as of 2021-05-13 06:45:15 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -53,18 +53,18 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17857">17857</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17857">`when 0r` and `when 0i` do not match with `case 0`</a>
+</td>
+</tr>
 <tr class=" maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/17855">17855</a>
 </td>
 <td>maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17855">[BUG] object allocation during garbage collection phase</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17854">17854</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17854">Crash with certain &quot;case&quot; expressions on FreeBSD</a>
 </td>
 </tr>
 <tr class=" mac maybenotbug ">
@@ -1642,10 +1642,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14378">On windows, RUBY_FIXNUM_MAX of 64 bits ruby  is 32 bits</a>
 </td>
 </tr>
-<tr class=" regexp ">
+<tr class=" patch regexp ">
 <td><a href="https://bugs.ruby-lang.org/issues/14367">14367</a>
 </td>
-<td>regexp</td>
+<td>patch regexp</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14367">Wrong interpretation of backslash C in regexp literals</a>
 </td>
 </tr>
