--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>355 Tagged Open Ruby Bugs as of 2021-05-14 06:25:28 +0900</title>
+<title>354 Tagged Open Ruby Bugs as of 2021-05-19 00:51:32 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -25,10 +25,10 @@
 <input type="submit" value="arm" />
 <input type="submit" value="aix" />
 <input type="submit" value="autoload" />
-<input type="submit" value="irb" />
 <input type="submit" value="jit" />
 <input type="submit" value="linux" />
 <input type="submit" value="solaris" />
+<input type="submit" value="irb" />
 <input type="submit" value="parser" />
 <input type="submit" value="s390" />
 <input type="submit" value="unfixable" />
@@ -42,9 +42,9 @@
 <input type="submit" value="wip-patch" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">355</span> matched)
+(<span id="matched">354</span> matched)
 <table>
-<caption>355 Tagged Open Ruby Bugs as of 2021-05-14 06:25:28 +0900</caption>
+<caption>354 Tagged Open Ruby Bugs as of 2021-05-19 00:51:32 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -53,6 +53,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17866">17866</a>
+</td>
+<td>maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17866">Incompatible changes with Psych 4.0.0</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/17864">17864</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17864">[BUG] try to mark T_NONE object (in Ractors)</a>
+</td>
+</tr>
 <tr class=" maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/17855">17855</a>
 </td>
@@ -282,13 +296,6 @@
 </td>
 <td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17725">Prepend breaks ability to override optimized methods</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17724">17724</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17724">Pattern matching error message is confusing</a>
 </td>
 </tr>
 <tr class=" ractor ">
@@ -562,13 +569,6 @@
 </td>
 <td>refine</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17494">ruby is hanged when using activesupport + rspec + rspec-parameterized</a>
-</td>
-</tr>
-<tr class=" irb ">
-<td><a href="https://bugs.ruby-lang.org/issues/17493">17493</a>
-</td>
-<td>irb</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17493">Calling Reline::Unicode.calculate_width appears to lock up when called from emacs or if output is redirected</a>
 </td>
 </tr>
 <tr class=" patch lib ">
@@ -1850,13 +1850,6 @@
 </td>
 <td>ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/12582">OpenSSL Authenticated Encryption should check for tag length</a>
-</td>
-</tr>
-<tr class=" win core ">
-<td><a href="https://bugs.ruby-lang.org/issues/12551">12551</a>
-</td>
-<td>win core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12551">Exception accessing file with long path on windows</a>
 </td>
 </tr>
 <tr class=" core ">
