--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>354 Tagged Open Ruby Bugs as of 2021-05-19 00:51:32 +0900</title>
+<title>355 Tagged Open Ruby Bugs as of 2021-05-20 00:03:12 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -11,9 +11,9 @@
 <input type="submit" value="build" />
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
-<input type="submit" value="notbug" />
 <input type="submit" value="thread" />
 <input type="submit" value="encoding" />
+<input type="submit" value="notbug" />
 <input type="submit" value="ractor" />
 <input type="submit" value="test" />
 <input type="submit" value="cygwin" />
@@ -42,9 +42,9 @@
 <input type="submit" value="wip-patch" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">354</span> matched)
+(<span id="matched">355</span> matched)
 <table>
-<caption>354 Tagged Open Ruby Bugs as of 2021-05-19 00:51:32 +0900</caption>
+<caption>355 Tagged Open Ruby Bugs as of 2021-05-20 00:03:12 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -53,6 +53,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17868">17868</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17868">Strange result of Coverage for while-in-while</a>
+</td>
+</tr>
 <tr class=" maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/17866">17866</a>
 </td>
@@ -1033,11 +1040,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16490">mkmf.rbの非互換な変更</a>
 </td>
 </tr>
-<tr class=" build notbug ">
+<tr class=" patch build ">
 <td><a href="https://bugs.ruby-lang.org/issues/16475">16475</a>
 </td>
-<td>build notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16475">[Installation process - compiling ruby 2.7.0 from source} &quot;make install&quot; step oddity for ruby 2.7.0 on linux minut (debian base)</a>
+<td>patch build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16475">[Installation process - compiling ruby 2.7.0 from source} &quot;make install&quot; step oddity for ruby 2.7.0 on linux mint (debian base)</a>
 </td>
 </tr>
 <tr class=" core ">
